--- a/.env.compose.example
+++ b/.env.compose.example
@@ -1,24 +1,68 @@
-# External ports (change to avoid conflicts)
+# Guild Con 2025 Environment Variables
+# Copy this file to .env and update with your values
+
+# ============================================
+# DATABASE CONFIGURATION
+# ============================================
+PGUSER=directus
+PGPASSWORD=changeme_strong_password_here
+PGDATABASE=guildcon
+
+# ============================================
+# DIRECTUS CMS CONFIGURATION
+# ============================================
+# Admin credentials for first login
+DIRECTUS_ADMIN_EMAIL=admin@guildcon.org
+DIRECTUS_ADMIN_PASSWORD=ChangeMeStrongPassword123!
+
+# Security keys (generate with: openssl rand -base64 32)
+DIRECTUS_KEY=changeme-random-uuid-here
+DIRECTUS_SECRET=changeme-random-string-at-least-32-chars
+
+# Directus Service Token
+# After first run:
+# 1. Login to Directus admin at http://localhost:8055
+# 2. Go to Settings > Access Tokens
+# 3. Create a token with appropriate permissions
+# 4. Paste it here and restart web service
+DIRECTUS_TOKEN=will-be-set-after-directus-setup
+
+# Directus URLs
+DIRECTUS_URL=http://directus:8055
+DIRECTUS_PUBLIC_URL=http://localhost:8055
+
+# CORS for Directus API (use * for local dev)
+CORS_ORIGIN=*
+
+# ============================================
+# APPLICATION CONFIGURATION
+# ============================================
+# Admin token for protected endpoints
+# Generate with: openssl rand -base64 32
+ADMIN_TOKEN=changeme-strong-admin-token-here
+
+# ============================================
+# SERVICE PORTS
+# ============================================
+# Change these if you have port conflicts
 WEB_PORT=8080
 DIRECTUS_PORT=8055
 
-# Postgres
-PGUSER=directus
-PGPASSWORD=directus
-PGDATABASE=guildcon
+# ============================================
+# EXTERNAL SERVICE URLS
+# ============================================
+# Update these with your actual URLs before launch!
 
-# Directus bootstrap
-DIRECTUS_KEY=please-change-key
-DIRECTUS_SECRET=please-change-secret
-DIRECTUS_ADMIN_EMAIL=admin@example.com
-DIRECTUS_ADMIN_PASSWORD=ChangeMe123!
-DIRECTUS_PUBLIC_URL=https://directus.example.com
+# Eventbrite Event URL (for general registration and CTF)
+EVENTBRITE_URL=https://www.eventbrite.com/e/guild-con-2025-tickets
 
-# CORS for Directus API. For local dev you can leave as *
-CORS_ORIGIN=*
+# Google Form for CFP Submissions
+GOOGLE_FORM_URL=https://docs.google.com/forms/d/your-form-id
 
-# Next.js env
-DIRECTUS_URL=http://directus:8055
-DIRECTUS_TOKEN=service-token-to-create
-ADMIN_TOKEN=change-me-long-random
+# Social Media Links
+TWITTER_URL=https://twitter.com/HackersGuildPGH
+DISCORD_URL=https://discord.gg/your-invite
 
+# Contact Emails
+CONTACT_EMAIL=info@guildcon.org
+SPONSOR_EMAIL=sponsors@guildcon.org
