--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,20 @@
-version: '3.9'
+version: '3.8'
 
 services:
-  db:
-    image: postgres:16
-    container_name: guildcon_db
-    restart: unless-stopped
-    environment:
-      POSTGRES_USER: ${PGUSER:-directus}
-      POSTGRES_PASSWORD: ${PGPASSWORD:-directus}
-      POSTGRES_DB: ${PGDATABASE:-guildcon}
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    networks: [guildcon]
-
-  directus:
-    image: directus/directus:latest
-    container_name: guildcon_directus
-    restart: unless-stopped
-    depends_on: [db]
-    environment:
-      KEY: ${DIRECTUS_KEY:-changeme}
-      SECRET: ${DIRECTUS_SECRET:-changeme}
-      ADMIN_EMAIL: ${DIRECTUS_ADMIN_EMAIL:-admin@example.com}
-      ADMIN_PASSWORD: ${DIRECTUS_ADMIN_PASSWORD:-ChangeMe123!}
-      DB_CLIENT: 'pg'
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_DATABASE: ${PGDATABASE:-guildcon}
-      DB_USER: ${PGUSER:-directus}
-      DB_PASSWORD: ${PGPASSWORD:-directus}
-      PUBLIC_URL: ${DIRECTUS_PUBLIC_URL:-http://localhost:${DIRECTUS_PORT:-8055}}
-      CORS_ENABLED: 'true'
-      CORS_ORIGIN: ${CORS_ORIGIN:-*}
+  backend:
+    build: ./backend
+    container_name: guildcon_backend
     ports:
-      - "${DIRECTUS_PORT:-8055}:8055"
+      - "${BACKEND_PORT:-8000}:8000"
     volumes:
-      - directus_uploads:/directus/uploads
-      - ./directus:/directus/extensions:ro
+      - ./backend:/app
+      - backend_data:/app/data
+      - backend_uploads:/app/static/uploads
+    environment:
+      - SECRET_KEY=${SECRET_KEY:-supersecretkey}
+      - ADMIN_USERNAME=${ADMIN_USERNAME:-admin}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-guildcon2025}
+    restart: unless-stopped
     networks: [guildcon]
 
   web:
@@ -44,24 +22,23 @@ services:
     container_name: guildcon_web
     restart: unless-stopped
     working_dir: /app
-    command: sh -lc "npm ci && npm run build && npm run start -p ${WEB_PORT:-8080}"
+    command: sh -c "npm install && npm run build && npm run start -- -p 8080 -H 0.0.0.0"
     environment:
       NODE_ENV: production
-      PORT: ${WEB_PORT:-8080}
-      DIRECTUS_URL: ${DIRECTUS_URL:-http://directus:8055}
-      DIRECTUS_TOKEN: ${DIRECTUS_TOKEN:-changeme-service-token}
-      ADMIN_TOKEN: ${ADMIN_TOKEN:-change-me-long-random}
+      PORT: 8080
+      API_URL: http://backend:8000
+      NEXT_PUBLIC_API_URL: http://localhost:8000
     volumes:
       - ./:/app
-    depends_on: [directus]
+    depends_on:
+      - backend
     ports:
-      - "${WEB_PORT:-8080}:${WEB_PORT:-8080}"
+      - "${WEB_PORT:-8080}:8080"
     networks: [guildcon]
 
 networks:
   guildcon: {}
 
 volumes:
-  pgdata: {}
-  directus_uploads: {}
-
+  backend_data: {}
+  backend_uploads: {}
