--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "24.4.0",
+    "@types/react": "19.1.13",
     "prisma": "^5.17.0",
-    "typescript": "^5.5.4"
+    "typescript": "5.9.2"
   }
 }
-
